test/corpus/L1/negative/unexpected-char.st
"---
kind: negative
section: error.unexpected-char
codes: E_UNEXPECTED_CHAR
---"
`
